syntax = "proto3";

package ml;

service MlService{
    rpc Generate (GenerateRequest) returns (GenerateResponse) {}
}

//Generate
message GenerateRequest{
    string name = 1;
    string genre = 2; 
    int32 length = 3;
    string userId = 4;
}

message GenerateResponse{
    string url = 1;
}


//Common message
message Void{}